<resources>
    <string name="app_name">Baby Buddy</string>
    <string name="about_text">This Android application is Open Source software created by &lt;a href=\'http://www.craftware.info\'&gt;Paul Konstantin Gerke&lt;/a&gt; and licensed under the MIT License (see below).\n\nThe source code of the application is available at &lt;a href=\'https://github.com/babybuddy/babybuddy-for-android/\'&gt;https://github.com/babybuddy/babybuddy-for-android/&lt;/a&gt;.\n\nThe application uses third-party media under attribution licenes listed below.</string>
    <string name="about_external_media_resources_title">Third party media</string>
    <string name="about_external_libraries_title">Third party libraries</string>
    <plurals name="unit_minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="unit_hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <string name="activity_singular_sleep">sleep</string>
    <string name="activity_singular_tummy_times">tummy time</string>
    <string name="activity_singular_feedings">feeding</string>
    <string name="activity_singular_pumping">pumping</string>
    <string name="activity_singular_changes">change</string>
    <string name="activity_singular_notes">note</string>
    <string name="activity_singular_bmi">bmi</string>
    <string name="activity_singular_temperature">temperature</string>
    <string name="activity_singular_weight">weight</string>
    <string name="activity_singular_height">height</string>
    <string name="activity_singular_head_circumference">head circumference</string>
    <string name="feeding_amount_title">Amount</string>
    <string name="store_feeding_amount_string">Amount: {quantity}</string>
    <string name="store_feeding_amount_none">None</string>
    <string name="tutorial_suggest_visit_help">To get started, check out the\nhelp in the main menu.</string>
    <string name="tutorial_long_click_notification">Long press a timeline entry to navigate directly to the\ncorresponding babybuddy page in your web browser.</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Login to Baby Buddy</string>
    <string name="logged_in_label">Logged in to Baby Buddy</string>
    <string name="next">Next</string>
    <string name="notes_editor_hint">Notes</string>
    <string name="previous">Previous</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="about_page_title">About Baby&#160;Buddy for Android</string>
    <string name="logoutMenu">Logout</string>
    <string name="showHelpMenuButtonTitle">Help</string>
    <string name="login_explanation">Please enter the URL to your <a href="https://github.com/babybuddy/babybuddy">Baby Buddy WebApp</a> installation. If you do not have a Baby Buddy server already, please visit the project page to find instructions how to host a server yourself.</string>
    <string name="login_button">Login</string>
    <string name="server_address_hint">Server Address</string>
    <string name="login_text_hint">Login Name</string>
    <string name="login_password_hint">Login Password</string>
    <string name="login_http_warning_title">Insecure connection</string>
    <string name="login_http_warning_message">
        This server URL does not start with \'https\'. This means that the password
        you entered can be intercepted and stolen!
    </string>
    <string name="login_http_warning_cancel">Cancel (advised)</string>
    <string name="login_http_warning_continue_login">Continue anyway</string>
    <string name="logging_in_message">Logging in…</string>
    <string name="login_qrcode_info_text_checking_camera">Checking for presence of a camera…</string>
    <string name="login_qrcode_info_text">You can also try to login using a Baby&#160;Buddy login QR code:</string>
    <string name="login_qrcode_info_text_no_camera">Your device does not have a camera. You cannot use QR Code logins.</string>
    <string name="login_qrcode_button_text">Login with QR Code</string>
    <string name="logged_in_no_children_found">(No children found)</string>
    <string name="diaper_title">Diaper</string>
    <string name="error_storing_activity_failed_title">Could not store activity</string>
    <string name="error_storing_activity_unsupported">Unsupported activity</string>
    <string name="popup_message_storing">Storing {activity} …</string>
    <string name="activity_notes_hint">Notes</string>
    <string name="diaper_color_label">Color</string>
    <string name="diaper_amount_title">Amount</string>
    <string name="activity_store_failure_message">Could not store activity</string>
    <string name="activity_store_failure_server_error">{message}\n\nServer reported: {server_message}</string>
    <string name="activity_store_failure_server_error_general">Error while storing activity</string>
    <string name="activity_store_failure_server_error_generic_ioerror">IO Error while storing activity</string>
    <string name="activity_store_failure_stop_timer">Stop timer</string>
    <string name="activity_store_failure_cancel">Cancel</string>
    <string name="activity_store_failure_failed_to_stop_title">Timer stop</string>
    <string name="activity_store_failure_failed_to_stop_message">Stopping timer failed</string>
    <string name="activity_store_failure_start_timer_failed">Start timer failed</string>
    <string name="cancel_timer_warning_title">Stop timer?</string>
    <string name="cancel_timer_warning_message">The {activity} timer is running for a long time already. Do you really want to stop it or keep it running?</string>
    <string name="cancel_timer_warning_stop">Stop</string>
    <string name="cancel_timer_warning_keep">Keep</string>
    <string name="conflicting_activity_title">Overlapping time entries</string>
    <string name="conflicting_activity_text">
        The timer overlaps with stored entries. Please choose a resolution action.
    </string>
    <string name="conflicting_activity_modify_option">Adjust stored</string>
    <string name="conflicting_activity_cancel_option">Cancel saving</string>
    <string name="conflicting_activity_stop_timer_option">Cancel this timer</string>
    <string name="conflicting_activity_failed_to_correct_conflicts">Failed to correct conflicting time entries</string>
    <string name="history_time_just_now">just now</string>
    <string name="history_time_ago">{value} ago</string>
    <string name="history_delete_title">Delete entry</string>
    <string name="history_delete_question">
        Are you sure you want to delete the {type} entry from {start_date} {start_time} - {end_time}?
    </string>
    <string name="history_delete_question_delete_button">Delete</string>
    <string name="history_delete_question_cancel_button">Cancel</string>
    <string name="history_loading_timeline_entry_failed">Failed to load {activity} entries.</string>
    <string name="history_loading_timeline_entry_failed_with_error">Failed to load {activity} entries: {error}</string>
    <string name="history_amount_timeline_pattern">Amount: {amount}</string>
    <string name="login_qrcode_camera_access_needed_dialog_title">Camera access needed</string>
    <string name="login_qrcode_camera_access_needed_dialog_body">
        In order to use the QR-Code scanner, the app requires access to your device\'s camera.
        \n\nAlternatively, you can choose to use the login screen and provide server, username,
        and password manually instead.
    </string>
    <string name="login_qrcode_camera_access_needed_dialog_confirm">Give permission</string>
    <string name="login_qrcode_camera_access_needed_dialog_cancel">Cancel</string>
    <string name="login_qrcode_title">Scan QR Code</string>
    <string name="login_qrcode_explanation">You find the login QR code by opening the Baby Buddy App website, clicking on your name in the top-right corner and selecting the "Add Device" option.</string>
    <string name="login_qrcode_status_no_code">[No Code Found]</string>
    <string name="login_qrcode_status_valid_code">[Login code found]</string>
    <string name="login_qrcode_status_invalid_code">[Invalid QR Code]</string>
    <string name="login_qrcode_feedback_template">Found login code for Baby Buddy website on:\n<a href="{url}">{url}</a></string>
    <string name="login_qrcode_login_button">Login now</string>
    <string name="login_qrcode_cancel_button">Cancel</string>
    <string name="login_qrcode_camera_access_was_disabled_message">Camera access was disabled.\nPlease enable camera access in Android\'s settings menu and try again.</string>
    <string name="login_qrcode_homeassistant_beta_warning_title">Unstable Homeassistant Support</string>
    <string name="login_qrcode_homeassistant_beta_warning_message">
        You are about to login to a home-assistant ingress server. Logging in to baby buddy this
        way is in beta-support and you might be logged out from your baby buddy instance
        unexpectedly and might need to login again.
    </string>
    <string name="login_qrcode_homeassistant_beta_warning_continue">Continue</string>
    <string name="dialog_ok">OK</string>
    <string name="help_title">Help</string>
    <string name="upgrade_latest_info_version_less_than_or_equal" translatable="false">2.4.0</string>
    <string name="upgrade_latest_info_title">Update {version}</string>
    <string name="upgrade_latest_info_note">This
        new version of babybuddy adds logging support for all missing event types. I worked
        hard on the interface changes to keep them compact and user-friendly. Please report any
        bugs or issues you have with this new interface via the "contact developer" option
        in the main menu.
    </string>
    <string name="disconnect_dialog_progress_message">Connecting to server…</string>
    <string name="disconnect_dialog_logout">Logout</string>
    <string name="export_debug_logs_title">Export Debug Logs</string>
    <string name="export_debug_logs_menu_item">Export Debug Logs</string>
    <string name="export_debug_logs_menu_item_copy_to_clipboard">Copy to clipboard</string>
    <string name="send_message_info">Send
        a message to me, the main developer, in case you experience errors or problems with
        the app. Please note that I want to keep your data confidential, so there is no way for me
        to respond to your messages directly. For direct communication, please refer to
        <a href="https://github.com/babybuddy/babybuddy-for-android">GitHub</a> instead.
    </string>
    <string name="send_message_send_title">Contact developer</string>
    <string name="send_message_send_button">Send</string>
    <string name="send_message_back_button">Back</string>
    <string name="send_message_failed_message">Failed to send message to developer</string>
    <string name="send_message_sent_message">Message sent to developer</string>
    <string name="setting_dark_light_mode">Dark/Light mode</string>
    <string name="timeline_title_line_title">Timeline</string>
</resources>